--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(testGame2)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 
-set(SOURCE_FILES main.cpp components.h systems.cpp systems.h world.cpp world.h)
+set(SOURCE_FILES main.cpp components.h systems.cpp systems.h world.cpp world.h utilities.cpp utilities.h)
 add_executable(testGame2 ${SOURCE_FILES})
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake_modules")
